--- a/style.css
+++ b/style.css
@@ -4,8 +4,41 @@
 body{
     display: flex;
     flex-direction: column;
-    font-family:Arial, Helvetica, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
+    justify-content: space-between;
     min-height: 100vh;
+}
+
+button{
+    margin: 0;
+    width: 100%;
+    padding: 5px;
+}
+
+.button-row{
+    display: flex;
+}
+
+#calculator{
+    align-items: center;
+    display: flex;
+    height: 500px;
+    justify-content: center;
+    min-width: fit-content;
+}
+
+#display{
+    display: flex;
+    justify-content: center;
+    min-width: fit-content;
+    width: 300px;
+}
+
+#display-text{
+    direction: rtl;
+    display: flex;
+    min-width: fit-content;
+    width: 100%;
 }
 
 footer{
@@ -13,6 +46,7 @@ footer{
     display: flex;
     justify-content: center;
     min-width: fit-content;
+    padding-bottom: 20px;
 }
 
 #main-heading{
