--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@
  * Color palette https://coolors.co/74a57f-e9806e-f5cb5c-242423-bfdbf7
  */
 body{
+    background-color: #BFDBF7;
+    color: #242423;
     display: flex;
     flex-direction: column;
     font-family: Arial, Helvetica, sans-serif;
@@ -20,7 +22,6 @@ button{
 }
 
 #calculator{
-    align-items: center;
     display: flex;
     height: 500px;
     justify-content: center;
